use receipt api directly from component
since receipt component service isn't used, don't provide it

--- a/src/app/store/routes/receipt/store-receipt.component.html
+++ b/src/app/store/routes/receipt/store-receipt.component.html
@@ -5,15 +5,19 @@
   https://opensource.org/licenses/MIT
 -->
 
-<app-centered-mat-spinner *ngIf="loading$ | async">
+<app-centered-mat-spinner *ngIf="loading; else loadedReceipt">
 </app-centered-mat-spinner>
-<div [hidden]="loading$ | async">
+<ng-template #loadedReceipt>
   <mat-card>
     <div class="icon-wrapper"><mat-icon>receipt_long</mat-icon></div>
     <h2 mat-card-title>¡Compra realizada con éxito!</h2>
-    <span>Confirmada el {{ (date$ | async) | date }}.</span><br/>
-    <span>Aquí están los detalles:</span>
-    <app-store-receipt-details-table [details]="details$ | async">
+    <p>Confirmada el {{ receipt.date | date }}.</p>
+    <p>Items en total: ${{ receipt.totalValue }}</p>
+    <p *ngIf="receipt.transportValue">Valor del transporte: ${{ receipt.transportValue }}</p>
+    <p *ngIf="receipt.taxValue">Impuestos: ${{ receipt.taxValue }}</p>
+    <p>Total pagado: ${{ receipt.totalValue }}</p>
+    <h3>Detalles de la compra:</h3>
+    <app-store-receipt-details-table [details]="receipt.details">
     </app-store-receipt-details-table>
   </mat-card>
-</div>
+</ng-template>
