--- a/src/app/shared/components/person-form/person-form.component.html
+++ b/src/app/shared/components/person-form/person-form.component.html
@@ -8,26 +8,32 @@
 <form [formGroup]="formGroup">
 
   <mat-form-field class="firstName">
-    <input matInput placeholder="Nombres" formControlName="firstName" />
+    <input matInput formControlName="firstName"
+      placeholder="Nombres" i18n-placeholder />
   </mat-form-field>
 
   <mat-form-field class="lastName">
-    <input matInput placeholder="Appelidos" formControlName="lastName" />
+    <input matInput formControlName="lastName"
+      placeholder="Appelidos" i18n-placeholder />
   </mat-form-field>
 
   <mat-form-field class="idNumber">
-    <input matInput placeholder="Rut" formControlName="idNumber" />
+    <input matInput formControlName="idNumber"
+      placeholder="Rut" i18n-placeholder />
   </mat-form-field>
 
   <mat-form-field class="email">
-    <input matInput placeholder="Email" formControlName="email" />
+    <input matInput formControlName="email"
+      placeholder="Email" i18n-placeholder />
   </mat-form-field>
 
   <mat-form-field class="phone1">
-    <input matInput placeholder="Teléfono 1" formControlName="phone1" />
+    <input matInput formControlName="phone1"
+      placeholder="Teléfono 1" i18n-placeholder />
   </mat-form-field>
 
   <mat-form-field class="phone2">
-    <input matInput placeholder="Teléfono 2" formControlName="phone2" />
+    <input matInput formControlName="phone2"
+      placeholder="Teléfono 2" i18n-placeholder />
   </mat-form-field>
 </form>
