--- a/src/app/store/components/billing-details-form/store-billing-details-form.component.html
+++ b/src/app/store/components/billing-details-form/store-billing-details-form.component.html
@@ -7,18 +7,14 @@
 
 <form [formGroup]="formGroup">
   <mat-radio-group formControlName="sellType"
-    aria-label="Selecciona el tipo de comprobante">
+    aria-label="Selecciona el tipo de comprobante" i18n-aria-label>
     <mat-radio-button *ngFor="let option of typesOptions"
       [value]="option"
-      (blur)="onTouched()">
-      {{ types[option] }}
-    </mat-radio-button>
+      (blur)="onTouched()">{{ types[option] }}</mat-radio-button>
   </mat-radio-group>
   <app-company-form #companyForm formControlName="company">
   </app-company-form>
   <app-addresses-editor-form #addressForm formControlName="address"
-    placeholder="Dirección de facturación"
-    editLabel="Editar dirección de facturación"
-    addLabel="Nueva dirección de facturación">
+    placeholder="Dirección de facturación" i18n-placeholder>
   </app-addresses-editor-form>
 </form>
