--- a/src/app/store/components/checkout-confirmation/store-checkout-confirmation.component.html
+++ b/src/app/store/components/checkout-confirmation/store-checkout-confirmation.component.html
@@ -7,7 +7,7 @@
 
 <mat-card *ngIf="checkoutRequest">
   <mat-card-header>
-    <h3 mat-card-title>¿Son estos datos correctos?</h3>
+    <h3 mat-card-title i18n>¿Son estos datos correctos?</h3>
   </mat-card-header>
   <div class="customer">
     <ng-container *ngIf="checkoutRequest.customer; else noCustomer">
@@ -21,7 +21,7 @@
     <ng-template #noCustomer>
       <mat-icon>person_off</mat-icon>&nbsp;
       <span class="details">
-        <span class="name">Cliente anónimo</span>
+        <span class="name" i18n>Cliente anónimo</span>
       </span>
     </ng-template>
   </div>
@@ -43,21 +43,21 @@
     </ng-container>
     <ng-template #noShipping>
       <mat-icon>local_shipping</mat-icon>&nbsp;
-      <span class="name">Retiro en Tienda</span>
+      <span i18n>Retiro en Tienda</span>
     </ng-template>
   </div>
 </mat-card>
-<p>Si está segur@ que la información ingresada es correcta, haga clic en el botón 'Solicitar transacción':</p>
+<p i18n>Si está segur@ que la información ingresada es correcta, haga clic en el botón 'Solicitar transacción':</p>
 <button type="button" class="request"
   mat-button mat-raised-button
   color="accent"
   [disabled]="loading"
   (click)="onClickRequest()">
-  Solicitar transacción
+  <span i18n>Solicitar transacción</span>
   <mat-icon>point_of_sale</mat-icon>
 </button>
 <mat-divider></mat-divider>
-<p>Una vez solicitada la transacción, puede proceder dando clic al botón 'Ir al pago':</p>
+<p i18n>Una vez solicitada la transacción, puede proceder dando clic al botón 'Ir al pago':</p>
 <app-store-checkout-button
   [checkoutDetails]="checkoutDetails">
 </app-store-checkout-button>
