--- a/src/app/store/components/header/login-button/store-header-login-button.component.html
+++ b/src/app/store/components/header/login-button/store-header-login-button.component.html
@@ -6,7 +6,7 @@
 -->
 
 <button mat-button type="button"
-  title="Aún no has iniciado sesión"
+  title="Aún no has iniciado sesión" i18n-title
   (click)="onClickLogIn()">
   <mat-icon>person_outline</mat-icon>
 </button>
