--- a/src/app/store/dialogs/product-details/store-product-details-dialog.component.html
+++ b/src/app/store/dialogs/product-details/store-product-details-dialog.component.html
@@ -10,7 +10,7 @@
   [autocycle]="false">
 </app-slideshow>
 <div class="about">
-  <h2 class="name">{{ product?.name }}</h2>
+  <h2 mat-dialog-title class="name">{{ product?.name }}</h2>
   <h4 class="barcode">{{ product?.barcode }}</h4>
   <p class="description">{{ product?.description }}</p>
 </div>
