--- a/src/app/shared/components/product-form/product-form.component.html
+++ b/src/app/shared/components/product-form/product-form.component.html
@@ -14,35 +14,40 @@
   </app-slideshow>
 
   <mat-form-field class="barcode">
-    <input matInput placeholder="Código" formControlName="barcode" />
+    <input matInput formControlName="barcode"
+      placeholder="Código" i18n-placeholder />
   </mat-form-field>
 
   <mat-form-field class="name">
-    <input matInput placeholder="Nombre" formControlName="name" />
+    <input matInput formControlName="name"
+      placeholder="Nombre" i18n-placeholder />
   </mat-form-field>
 
   <mat-form-field class="category">
-    <mat-select placeholder="Familia de Producto" formControlName="category">
+    <mat-select formControlName="category"
+      placeholder="Familia de Producto" i18n-placeholder>
       <mat-option *ngFor="let f of (categories$ | async)"
-        [value]="f.code">
-        {{ f.name }}
-      </mat-option>
+        [value]="f.code">{{ f.name }}</mat-option>
     </mat-select>
   </mat-form-field>
 
   <mat-form-field class="price">
-    <input matInput placeholder="Precio" formControlName="price" />
+    <input matInput formControlName="price"
+      placeholder="Precio" i18n-placeholder />
   </mat-form-field>
 
   <!-- <mat-form-field class="stock">
-    <input matInput placeholder="Stock Actual" formControlName="stock" />
+    <input matInput formControlName="stock"
+      placeholder="Stock Actual" i18n-placeholder />
   </mat-form-field> -->
 
   <!-- <mat-form-field class="cStock">
-    <input matInput placeholder="Stock crítico" formControlName="criticalStock" />
+    <input matInput formControlName="criticalStock"
+      placeholder="Stock crítico" i18n-placeholder />
   </mat-form-field> -->
 
   <mat-form-field class="desc">
-    <textarea matInput placeholder="Descripción" formControlName="description"></textarea>
+    <textarea matInput formControlName="description"
+      placeholder="Descripción" i18n-placeholder></textarea>
   </mat-form-field>
 </form>
