--- a/src/app/shared/components/sell-form/sell-form.component.html
+++ b/src/app/shared/components/sell-form/sell-form.component.html
@@ -8,58 +8,62 @@
 <form [formGroup]="formGroup">
 
   <mat-form-field style="grid-area: date">
-    <input matInput placeholder="Fecha" [ngModel]="sellDate" [ngModelOptions]="{ standalone: true }" disabled />
+    <input matInput [ngModel]="sellDate" [ngModelOptions]="{ standalone: true }" disabled
+      placeholder="Fecha" i18n-placeholder />
   </mat-form-field>
 
   <mat-form-field style="grid-area: billingType">
-    <mat-select placeholder="Tipo de Venta" formControlName="billingType">
-      <mat-option *ngFor="let b of (billingTypes$ | async)" [value]="b.name">
-        {{ b.name }}
-      </mat-option>
+    <mat-select formControlName="billingType"
+      placeholder="Tipo de Venta" i18n-placeholder>
+      <mat-option *ngFor="let b of (billingTypes$ | async)"
+        [value]="b.name">{{ b.name }}</mat-option>
     </mat-select>
   </mat-form-field>
 
   <mat-form-field style="grid-area: salesperson">
-    <mat-select placeholder="Vendedor" formControlName="salesperson">
-      <mat-option *ngFor="let e of (salespeople$ | async)" [value]="e.person.idNumber">
-        {{ e.person.firstName }} {{ e.person.lastName }}
-      </mat-option>
+    <mat-select formControlName="salesperson"
+      placeholder="Vendedor" i18n-placeholder>
+      <mat-option *ngFor="let e of (salespeople$ | async)"
+        [value]="e.person.idNumber">{{
+          e.person.firstName + ' ' + e.person.lastName
+        }}</mat-option>
     </mat-select>
   </mat-form-field>
 
   <mat-form-field style="grid-area: customer">
-    <mat-select placeholder="Cliente" formControlName="customer">
-      <mat-option *ngFor="let c of (customers$ | async)" [value]="c.person.idNumber">
-        {{ c.person.firstName }} {{ c.person.lastName }}
-      </mat-option>
+    <mat-select formControlName="customer"
+      placeholder="Cliente" i18n-placeholder>
+      <mat-option *ngFor="let c of (customers$ | async)"
+        [value]="c.person.idNumber">{{
+          c.person.firstName + " " + c.person.lastName
+        }}</mat-option>
     </mat-select>
   </mat-form-field>
 
   <mat-card style="grid-area: details">
     <div class="details-header">
-      <h3>Productos de esta Venta</h3>
+      <h3 i18n>Productos de esta Venta</h3>
       <button mat-button mat-raised-button type="button"
         color="primary"
-        (click)="onClickAddProducts()">
-        Agregar
-      </button>
+        (click)="onClickAddProducts()"
+        i18n>Agregar</button>
     </div>
     <div class="details-table-wrapper">
       <table mat-table [dataSource]="sellDetails$">
         <ng-container matColumnDef="product">
-          <th mat-header-cell *matHeaderCellDef> Nombre </th>
+          <th mat-header-cell *matHeaderCellDef i18n>Nombre</th>
           <td mat-cell *matCellDef="let detail">
             {{ detail.product.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef> Precio </th>
+          <th mat-header-cell *matHeaderCellDef i18n>Precio</th>
           <td mat-cell *matCellDef="let detail">
             ${{ detail.product.price }}
           </td>
         </ng-container>
         <ng-container matColumnDef="quantity">
-          <th mat-header-cell *matHeaderCellDef> Cantidad </th>
+          <th mat-header-cell *matHeaderCellDef i18n>Cantidad</th>
           <td mat-cell *matCellDef="let detail; let i=index">
             <button mat-button mat-icon-button type="button"
               (click)="onClickIncreaseDetailProductQuantity(i)">
@@ -74,7 +78,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> </th>
+          <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let i=index">
             <button mat-button mat-icon-button type="button"
               color="warn"
@@ -92,8 +96,8 @@
 
   <div style="grid-area: summary">
     <div class="summary-data">
-      <div>Subtotal: ${{ sellNetValue$ | async }}</div>
-      <div>Total: ${{ sellTotalValue$ | async }}</div>
+      <div>{{ sellNetValueLabel$ | async }}</div>
+      <div>{{ sellTotalValueLabel$ | async }}</div>
     </div>
   </div>
 </form>
