--- a/src/app/shared/components/slideshow/slideshow.component.html
+++ b/src/app/shared/components/slideshow/slideshow.component.html
@@ -24,7 +24,8 @@
   </ng-container>
   <ng-template #noImageAvailable>
     <div class="slide-wrapper">
-      <img src="assets/img/products/unavailable.png" alt="Imagen no disponible" />
+      <img src="assets/img/products/unavailable.png"
+        alt="Imagen no disponible" i18n-alt />
     </div>
   </ng-template>
 </div>
