--- a/src/app/shared/components/user-form/user-form.component.html
+++ b/src/app/shared/components/user-form/user-form.component.html
@@ -7,28 +7,31 @@
 
 <form [formGroup]="formGroup">
   <mat-form-field>
-    <input matInput placeholder="Nombre de Usuario" formControlName="name" />
+    <input matInput formControlName="name"
+      placeholder="Nombre de Usuario" i18n-placeholder/>
   </mat-form-field>
 
   <mat-form-field>
-    <input matInput placeholder="Clave de Usuario" formControlName="password" type="password" />
+    <input matInput formControlName="password" type="password"
+      placeholder="Clave de Usuario" i18n-placeholder/>
   </mat-form-field>
 
   <mat-form-field>
-    <mat-select placeholder="Persona" formControlName="person">
+    <mat-select formControlName="person"
+      placeholder="Persona" i18n-placeholder>
       <mat-option *ngFor="let p of (people$ | async)"
-        [value]="p.idNumber">
-        {{ p.firstName + " " + p.lastName + " (" + p.idNumber + ")" }}
-      </mat-option>
+        [value]="p.idNumber">{{
+          p.firstName + " " +
+          p.lastName + " (" + p.idNumber + ")"
+        }}</mat-option>
     </mat-select>
   </mat-form-field>
 
   <mat-form-field>
-    <mat-select placeholder="Rol" formControlName="role">
+    <mat-select formControlName="role"
+      placeholder="Rol" i18n-placeholder>
       <mat-option *ngFor="let r of (roles$ | async)"
-        [value]="r.name">
-        {{ r.name }}
-      </mat-option>
+        [value]="r.name">{{ r.name }}</mat-option>
     </mat-select>
   </mat-form-field>
 </form>
