--- a/src/app/shared/dialogs/address-form/address-form-dialog.component.html
+++ b/src/app/shared/dialogs/address-form/address-form-dialog.component.html
@@ -13,13 +13,11 @@
 <div class="actions">
   <button type="button" class="cancel" mat-dialog-close
     mat-button mat-raised-button
-    color="warn">
-    Cancelar
-  </button>
+    color="warn"
+    i18n>Cancelar</button>
   <button type="button" class="accept"
     mat-button mat-raised-button
     [disabled]="addressForm.formGroup.invalid"
-    (click)="onClickAcceptEdition()">
-    Aceptar
-  </button>
+    (click)="onClickAcceptEdition()"
+    i18n>Aceptar</button>
 </div>
