--- a/src/app/shared/dialogs/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/dialogs/confirmation-dialog/confirmation-dialog.component.html
@@ -10,13 +10,11 @@
 <mat-dialog-actions align="center">
   <button mat-button mat-raised-button
     type="button"
-    [mat-dialog-close]="true">
-    Sí
-  </button>
+    [mat-dialog-close]="true"
+    i18n>Sí</button>
   <button mat-button mat-raised-button
     type="button"
     [mat-dialog-close]="false"
-    autofocus>
-    No
-  </button>
+    autofocus
+    i18n>No</button>
 </mat-dialog-actions>
