--- a/src/app/shared/dialogs/edit-profile-form-dialog/edit-profile-form-dialog.component.html
+++ b/src/app/shared/dialogs/edit-profile-form-dialog/edit-profile-form-dialog.component.html
@@ -15,13 +15,11 @@
 
   <div class="actions">
     <button mat-button mat-raised-button type="button"
-      (click)="onSubmit()">
-      Aceptar
-    </button>
+      (click)="onSubmit()"
+      i18n>Aceptar</button>
     <button mat-button mat-raised-button type="button"
       [color]="cancelButtonColor$ | async"
-      (click)="onCancel()">
-      Cancelar
-    </button>
+      (click)="onCancel()"
+      i18n>Cancelar</button>
   </div>
 </form>
