--- a/src/app/shared/dialogs/images-array/images-array-dialog.component.html
+++ b/src/app/shared/dialogs/images-array/images-array-dialog.component.html
@@ -5,9 +5,9 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2>Asociar imágenes</h2>
+<h2 i18n>Asociar imágenes</h2>
 <mat-form-field class="search" appearance="fill">
-  <mat-label>Buscar imágenes</mat-label>
+  <mat-label i18n>Buscar imágenes</mat-label>
   <input matInput type="text" [formControl]="filterFormControl" />
 </mat-form-field>
 <div class="list-wrapper">
@@ -24,12 +24,10 @@
 <div class="actions">
   <button mat-button mat-raised-button type="button"
     (click)="onClickAccept()"
-    mat-dialog-close>
-    Aceptar
-  </button>
+    mat-dialog-close
+    i18n>Aceptar</button>
   <button mat-button mat-raised-button type="button"
     color="warn"
-    mat-dialog-close>
-    Cerrar
-  </button>
+    mat-dialog-close
+    i18n>Cerrar</button>
 </div>
