--- a/src/app/store/components/cart-contents-table/store-cart-contents-table.component.html
+++ b/src/app/store/components/cart-contents-table/store-cart-contents-table.component.html
@@ -7,24 +7,29 @@
 
 <table mat-table [dataSource]="details$">
   <ng-container matColumnDef="product">
-    <th mat-header-cell *matHeaderCellDef> Producto </th>
+    <th mat-header-cell *matHeaderCellDef>
+      <span i18n>Producto</span>
+    </th>
     <td mat-cell *matCellDef="let detail">
       <span class="name">{{ detail.product.name }}</span><br/>
       <span class="barcode">{{ detail.product.barcode }}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef class="center"> Precio / Unidad </th>
+    <th mat-header-cell *matHeaderCellDef class="center">
+      <span i18n>Precio / Unidad</span>
+    </th>
     <td mat-cell *matCellDef="let detail" class="center">
-      ${{ detail.product.price }}
+      <span>${{ detail.product.price }}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="quantity">
-    <th mat-header-cell *matHeaderCellDef class="center"> Unidades </th>
+    <th mat-header-cell *matHeaderCellDef class="center"
+      i18n>Unidades</th>
     <td mat-cell *matCellDef="let detail; let i = index" class="center">
       <button type="button" class="decrease"
         mat-button mat-icon-button
-        title="Quitar unidad de '{{ detail.product.name }}'"
+        title="Quitar unidad de '{{ detail.product.name }}'" i18n-title
         [disabled]="detail.units < 2"
         (click)="onClickDecreaseProductQuantity(i)">
         <mat-icon>remove</mat-icon>
@@ -32,16 +37,18 @@
       {{ detail.units }}
       <button type="button" class="increase"
         mat-button mat-icon-button
-        title="Agregar unidad de '{{ detail.product.name }}'"
+        title="Agregar unidad de '{{ detail.product.name }}'" i18n-title
         (click)="onClickIncreaseProductQuantity(i)">
         <mat-icon>add</mat-icon>
       </button>
     </td>
   </ng-container>
   <ng-container matColumnDef="total">
-    <th mat-header-cell *matHeaderCellDef class="center"> Precio </th>
-    <td mat-cell *matCellDef="let detail" class="center">
-      ${{ detail.product.price * detail.units }}
+    <th mat-header-cell *matHeaderCellDef>
+      <span i18n>Precio</span>
+    </th>
+    <td mat-cell *matCellDef="let detail">
+      <span>${{ detail.product.price * detail.units }}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="actions">
@@ -49,7 +56,7 @@
     <td mat-cell *matCellDef="let detail; let i = index" class="right">
       <button type="button" class="remove"
         mat-button mat-icon-button
-        title="Quitar todas las unidades de '{{ detail.product.name }}'"
+        title="Quitar todas las unidades de '{{ detail.product.name }}'" i18n-title
         color="warn"
         (click)="onClickRemoveProduct(i)">
         <mat-icon>delete</mat-icon>
