--- a/src/app/store/components/checkout-button/store-checkout-button.component.html
+++ b/src/app/store/components/checkout-button/store-checkout-button.component.html
@@ -12,7 +12,7 @@
     color="accent"
     [disabled]="disabled"
     (click)="form.submit()">
-    Ir al pago
+    <span i18n>Ir al pago</span>
     <mat-icon>attach_money</mat-icon>
   </button>
 </form>
