--- a/src/app/store/components/receipt-details-table/store-receipt-details-table.component.html
+++ b/src/app/store/components/receipt-details-table/store-receipt-details-table.component.html
@@ -7,27 +7,35 @@
 
 <table mat-table [dataSource]="dataSource">
   <ng-container matColumnDef="product">
-    <th mat-header-cell *matHeaderCellDef> Producto </th>
+    <th mat-header-cell *matHeaderCellDef>
+      <span i18n>Producto</span>
+    </th>
     <td mat-cell *matCellDef="let detail">
       <span class="name">{{ detail.product.name }}</span><br/>
       <span class="barcode">{{ detail.product.barcode }}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef class="center"> Precio / Unidad </th>
+    <th mat-header-cell *matHeaderCellDef class="center">
+      <span i18n>Precio / Unidad</span>
+    </th>
     <td mat-cell *matCellDef="let detail" class="center">
-      ${{ detail.product.price }}
+      <span>${{ detail.unitValue }}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="quantity">
-    <th mat-header-cell *matHeaderCellDef class="center"> Unidades </th>
+    <th mat-header-cell *matHeaderCellDef class="center">
+      <span i18n>Unidades</span>
+    </th>
     <td mat-cell *matCellDef="let detail; let i = index" class="center">
       {{ detail.units }}
   </ng-container>
   <ng-container matColumnDef="total">
-    <th mat-header-cell *matHeaderCellDef class="center"> Precio </th>
+    <th mat-header-cell *matHeaderCellDef class="center" >
+      <span i18n>Precio</span>
+    </th>
     <td mat-cell *matCellDef="let detail" class="center">
-      ${{ detail.product.price * detail.units }}
+      <span>${{ detail.unitValue * detail.units }}</span>
     </td>
   </ng-container>
 
