--- a/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
+++ b/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
@@ -5,21 +5,24 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 mat-dialog-title>Nueva Cuenta de Usuario</h2>
+<h2 mat-dialog-title i18n>Nueva Cuenta de Usuario</h2>
 <app-centered-mat-spinner *ngIf="registering$ | async">
 </app-centered-mat-spinner>
 <div [hidden]="registering$ | async">
   <form [formGroup]="formGroup" (submit)="onSubmit()">
     <mat-form-field class="name">
-      <input matInput placeholder="Nombre de Usuario" formControlName="name" />
+      <input matInput formControlName="name"
+        placeholder="Nombre de Usuario" i18n-placeholder />
     </mat-form-field>
 
     <mat-form-field class="pass1">
-      <input matInput placeholder="Clave de Usuario" formControlName="pass1" type="password" />
+      <input matInput formControlName="pass1" type="password"
+        placeholder="Clave de Usuario" i18n-placeholder/>
     </mat-form-field>
 
     <mat-form-field class="pass2">
-      <input matInput placeholder="Repetir Clave" formControlName="pass2" type="password" />
+      <input matInput formControlName="pass2" type="password"
+        placeholder="Repetir Clave" i18n-placeholder />
     </mat-form-field>
 
     <app-person-form formControlName="person">
@@ -29,12 +32,12 @@
       <button mat-button mat-raised-button type="submit"
         color="primary"
         [disabled]="formGroup.invalid">
-        Aceptar
+        <span i18n>Aceptar</span>
       </button>
 
       <button mat-button mat-raised-button type="button"
         (click)="onCancel()">
-        Cancelar
+        <span i18n>Cancelar</span>
       </button>
     </div>
   </form>
